--- a/playbooks/templates/www.conf.j2
+++ b/playbooks/templates/www.conf.j2
@@ -40,6 +40,12 @@ php_value[redis.session.lock_retries] = 10
 
 ; OpCache Settings
 php_admin_value[opcache.enable] = 1
-php_admin_value[opcache.memory_consumption] = 128
+php_admin_value[opcache.memory_consumption] = 256
 php_admin_value[opcache.interned_strings_buffer] = 16
-php_admin_value[opcache.max_accelerated_files] = 10000
+php_admin_value[opcache.max_accelerated_files] = 32531
+php_admin_value[opcache.validate_timestamps] = 0
+
+; Additional Redis caching settings
+php_value[redis.persistent] = 1
+php_value[redis.timeout] = 1
+php_value[redis.read_timeout] = 1
