--- a/playbooks/templates/real-ip.conf.j2
+++ b/playbooks/templates/real-ip.conf.j2
@@ -1,4 +1,4 @@
-real_ip_header X-Forwarded-For;
+real_ip_header CF-Connecting-IP;
 real_ip_recursive on;
 set_real_ip_from 10.0.0.0/8;
 set_real_ip_from 172.16.0.0/12;
