Avoid thundering herd problem

--- a/roles/cf_whitelist/templates/cf-whitelist.timer.j2
+++ b/roles/cf_whitelist/templates/cf-whitelist.timer.j2
@@ -3,6 +3,7 @@ Description=Whitelist IPs of registered users in Cloudflare every day
 
 [Timer]
 OnCalendar=daily
+RandomizedDelaySec=1h
 Persistent=true
 Unit=cf-whitelist.service
 
